vlib/v/checker/tests/string_str_err.out
vlib/v/checker/tests/string_str_err.v:2:16: error: unknown method: `string.str`
    1| fn main() {
    2|     println('aaa'.str())
                         ~~~~~
    3| }
