vlib/v/checker/tests/string_str_err.v
fn main() {
	println('aaa'.str())
}
